<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="com.jgr.android.loginformdemo.MainActivity">

    <TextView
            android:id="@+id/title_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/validate_user_title"/>

    <LinearLayout
            android:id="@+id/form_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/username_text"
                android:layout_width="match_parent"
                android:hint="@string/username_hint"
                android:layout_height="wrap_content" />

        <EditText
                android:id="@+id/password_text"
                android:hint="@string/password_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <Switch
                android:id="@+id/person_type_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:text="@string/switch_title" />

        <Button
                android:id="@+id/action_button"
                android:text="@string/button_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
            android:id="@+id/action_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

</LinearLayout>
